--- a/base.html
+++ b/base.html
@@ -84,7 +84,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="filter: brightness(44%); background-image:url(img/balling.png)"></div>
+		<div class="background_image" style="filter: brightness(44%); background-image:url(img/balling.jpg)"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
