--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Offside</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Offside template project">
+<meta name="description" content="Host your own tournaments with Offside">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -84,7 +84,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="filter: brightness(44%); background-image:url(img/balling.png)"></div>
+		<div class="background_image" style="filter: brightness(44%); background-image:url(img/balling.jpg)"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
