--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<!-- Box -->
 						<div class="box">
 							<div class="box_icon d-flex flex-column align-items-center justify-content-center"><img src="img/icon_0.png" alt=""></div>
-							<div class="box_title">Tack Events</div>
+							<div class="box_title">Track Events</div>
 							<div class="box_text">
 								<p>Etiam commodo justo nec aliquam feugiat. Donec a leo eget augue porttitor sollicitudin.</p>
 							</div>
